﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2006-12-15 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2006-12-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_export.lib.php, /common.lib.php, lang/*:
      bug #1607282, bug in older MySQL removes auto_increment when asking
      for MYSQL40 compatibility mode

2006-12-12 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Table.class.php: problem changing a TIMESTAMP to DEFAULT 0
    * tbl_change.php: bug #1610314, incomplete detection of binary column

2006-12-11 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2006-12-10 Marc Delisle  <lem9@users.sourceforge.net>
    * many scripts: we were using "uva" in variables and function names,
      this was code suggested by University of Virginia; I improved the code
      by removing this uva prefix
    * libraries/export/sql.php: patch #1595784, add charset information
      to SQL export, thanks to Christian Schmidt
    * css/phpmyadmin.css.php, libraries/session.inc.php,
      libraries/Config.class.php, libraries/header_meta_style.inc.php:
      patch #1611684, allow client caching of phpmyadmin.css.php,
      thanks to Christian Schmidt

2006-12-07 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/ip_allow_deny.lib.php: checks that the header contains
      only one IP address, thanks to Christian Schmidt

2006-12-06 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/import.lib.php, /common.lib.php: bug #1603660, 
      incorrect escaping of ">"
    * server_variables.php: bug #1589611, problem on 64-bit systems

2006-12-05 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: Grant all privileges on wildcard name: we should
      really grant on username\_ instead of username_

2006-12-05 Michal Čihař  <michal@cihar.com>
    * server_privileges.php: Add IF NOT EXISTS to CREATE DATABASE query (RFE