@@ -657,9 +657,9 @@ GRANT ALL PRIVILEGES ON user_base.* TO 'real_user'@localhost IDENTIFIED BY 'real
         &quot;stduser/stdpass&quot;.</dd>
 
     <dt id="cfg_Servers_auth_type">$cfg['Servers'][$i]['auth_type'] string
-        <tt>['<abbr title="HyperText Transfer Protocol">HTTP</abbr>'|'cookie'|'config']</tt></dt>
+        <tt>['<abbr title="HyperText Transfer Protocol">HTTP</abbr>'|'http'|'cookie'|'config'|'signon']</tt></dt>
     <dd>Whether config or cookie or
-        <abbr title="HyperText Transfer Protocol">HTTP</abbr> authentication
+        <abbr title="HyperText Transfer Protocol">HTTP</abbr> or signon authentication
         should be used for this server.
         <ul><li>'config' authentication (<tt>$auth_type&nbsp;=&nbsp;'config'</tt>)
                 is the plain old way: username and password are stored in
@@ -672,7 +672,7 @@ GRANT ALL PRIVILEGES ON user_base.* TO 'real_user'@localhost IDENTIFIED BY 'real
                 ends. This can also allow you to log in in arbitrary server if
                 <tt><a href="#AllowArbitraryServer" class="configrule">$cfg['AllowArbitraryServer']</a></tt> enabled.
             </li>
-            <li>'<abbr title="HyperText Transfer Protocol">HTTP</abbr>' authentication (was called 'advanced' in older versions)
+            <li>'<abbr title="HyperText Transfer Protocol">HTTP</abbr>' authentication (was called 'advanced' in older versions and can be written also as 'http')
                 (<tt>$auth_type&nbsp;=&nbsp;'<abbr title="HyperText Transfer Protocol">HTTP</abbr>'</tt>) as introduced in 1.3.0
                 allows you to log in as any valid MySQL user via HTTP-Auth.</li>
             <li>'signon' authentication mode 
