@@ -3046,6 +3046,8 @@ if (! defined('PMA_MINIMUM_COMMON')) {
         // (for a quick check of path disclosure in auth/cookies:)
         $coming_from_common = true;
 
+        // to allow HTTP or http
+        $cfg['Server']['auth_type'] = strtolower($cfg['Server']['auth_type']);
         if (!file_exists('./libraries/auth/' . $cfg['Server']['auth_type'] . '.auth.lib.php')) {
             header('Location: error.php'
                     . '?lang='  . urlencode($available_languages[$lang][2])
