@@ -5,6 +5,11 @@ phpMyAdmin - ChangeLog
 $Id$
 $HeadURL$
 
+2006-12-15 Marc Delisle  <lem9@users.sourceforge.net>
+    * Documentation.html, libraries/common.lib.php, config.default.php:
+      bug #1615313, doc referred to HTTP so enable the code to accept
+      either HTTP or http as auth_type
+
 2006-12-15 Michal Čihař  <michal@cihar.com>
     * lang/czech: Updated.
 
